<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="vertical"
            android:scrollbars="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >


        <com.mcgs.srx.Util.JustifyTextView
            android:id="@+id/tv_about_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="5dp"
            android:textSize="25dp"
            android:text="@string/android_version"
            />


        <com.mcgs.srx.Util.JustifyTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_about_device"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="5dp"
            android:textSize="25dp"
            android:text="@string/hardware_platform"
            />

        <com.mcgs.srx.Util.JustifyTextView
            android:id="@+id/tv_module"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="5dp"
            android:textSize="25dp"
            android:text="@string/devices_module"
            />

        <com.mcgs.srx.Util.JustifyTextView
            android:id="@+id/firmware_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_module"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="5dp"
            android:textSize="25dp"
            android:text="@string/firmware_version"
            />


        <com.mcgs.srx.Util.JustifyTextView
            android:id="@+id/chip_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firmware_version"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:lineSpacingExtra="5dp"
            android:textSize="25dp"
            android:text="@string/chip_model"
            />




    </RelativeLayout>

</ScrollView>