<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">


    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.0"
        android:orientation="vertical"
        >

        <ScrollView
            android:id="@+id/scrollview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/indexes2_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="50dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/index2_0"
                    android:textSize="@dimen/indexes_0_size"
                    />

                <TextView
                    android:id="@+id/indexes2_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="50dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/index2_1"
                    android:textSize="@dimen/indexes_0_size"
                    />

                <TextView
                    android:id="@+id/indexes2_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="40dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/index2_2"
                    android:textSize="@dimen/indexes_0_size"
                    />


                <TextView
                    android:id="@+id/indexes2_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="40dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/index2_3"
                    android:textSize="@dimen/indexes_0_size"
                    />

                <TextView
                    android:id="@+id/indexes2_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="50dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/index2_4"
                    android:textSize="@dimen/indexes_0_size"
                    />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="#cdcdcd"/>

    <LinearLayout

        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3.0"
        android:orientation="vertical"
        >

        <ScrollView
            android:id="@+id/scrollview2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <com.mcgs.srx.Util.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/android_rarotion_doc_1"
                    android:textSize="@dimen/indexes_0_size"
                    />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:lineSpacingExtra="5dp"
                    android:src="@drawable/pic2_1"
                    />


                <com.mcgs.srx.Util.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/android_rarotion_doc_2"
                    android:textSize="@dimen/indexes_0_size"
                    />


                <com.mcgs.srx.Util.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/android_rarotion_doc_3"
                    android:textSize="@dimen/indexes_0_size"
                    />


                <com.mcgs.srx.Util.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/android_rarotion_doc_4"
                    android:textSize="@dimen/indexes_0_size"
                    />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:lineSpacingExtra="5dp"
                    android:src="@drawable/pic2_2"
                    />


                <com.mcgs.srx.Util.JustifyTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/android_rarotion_doc_5"
                    android:textSize="@dimen/indexes_0_size"
                    />


            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>